2001-07-07  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex.c: Limit string length printed in debug messages to
	100 chars.

	* configure.in: Don't warn about versioning if not on ELF system.

2001-07-07  Andreas Jaeger  <aj@suse.de>

	* sysdeps/*: Put files from GNU MP Library under LGPL v2.1.

2001-07-06  Ulrich Drepper  <drepper@redhat.com>

	* po/gl.po: Update from translation team.

2001-07-06  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/configure.in: Fix handling of
	sysconfdir.

	* manual/libc-texinfo.sh: Add note for the FDL.

	* manual/argp.texi (Argp Example 4): Fix texinfo warning.

	* manual/libc.texinfo: Regenerated.

	* manual/fdl.texi: Fix node.

	* config.make.in (sysconfdir): Replace correctly.
	Closes PR libc/2369, reported by Peter Simons <simons@cryp.to>.

	* sysdeps/unix/sysv/linux/alpha/configure.in: Removed, it's no
	longer needed.

	* sysdeps/unix/sysv/linux/configure.in (libc_cv_linuxVER): Add
	case for alpha.
	Rework handling of missing linuxthreads add-on.

	* configure.in: Remove unused sysconfdir substitution.

	* manual/Makefile (texis): Add fdl.texi.
	* manual/fdl.texi: New.
	* manual/socket.texi (Host Names): Improve grammar, fix overflow hbox.
	* manual/libc.texinfo: Add fdl, update titlepage.
	Patches by Brian Youmans <3diff@gnu.org>.

	* sysdeps/unix/make_errlist.c (main): Print LGPL v2.1 for
	generated file.

2001-07-06  Paul Eggert  <eggert@twinsun.com>

	* manual/argp.texi: Remove ignored LGPL copyright notice; it's
	not appropriate for documentation anyway.
	* manual/libc-texinfo.sh: "Library General Public License" ->
	"Lesser General Public License".
        * COPYING: Fix Y2k bug in sample copyright notices.
        * manual/lesser.texi: Renamed from manual/lgpl.texinfo,
        as fsf.org uses the name "lesser.texi".
	* manual/Makefile (texis): Follow rename.

2001-07-06  Andreas Jaeger  <aj@suse.de>

	* All files under GPL/LGPL version 2: Place under LGPL version
	2.1.
